--- a/cuda/cuda.vcxproj.filters
+++ b/cuda/cuda.vcxproj.filters
@@ -28,6 +28,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="src\project\simpleCNN.cuh" />
+    <ClInclude Include="src\project\imageGray.cuh" />
+    <ClInclude Include="src\project\histogramEqualization.cuh" />
+    <ClInclude Include="src\project\matrixMulti.cuh" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\project\kernel.cu" />
@@ -38,5 +41,8 @@
       <Filter>源文件</Filter>
     </CudaCompile>
     <CudaCompile Include="src\project\simpleCNN.cu" />
+    <CudaCompile Include="src\project\imageGray.cu" />
+    <CudaCompile Include="src\project\histogramEqualization.cu" />
+    <CudaCompile Include="src\project\matrixMulti.cu" />
   </ItemGroup>
 </Project>
