--- a/cuda/cuda.vcxproj
+++ b/cuda/cuda.vcxproj
@@ -147,8 +147,12 @@
     <CudaCompile Include="cuda.cpp" />
     <CudaCompile Include="src\project\imageGray.cu" />
     <CudaCompile Include="src\project\matrixMulti.cu" />
+    <CudaCompile Include="src\project\parallelMergeSort.cu" />
+    <CudaCompile Include="src\project\parallelprefixSum.cu" />
     <CudaCompile Include="src\project\simpleCNN.cu" />
+    <CudaCompile Include="src\project\solveLinearEquations.cu" />
     <CudaCompile Include="src\project\vecAdd.cpp" />
+    <CudaCompile Include="src\project\vecNormalization.cu" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="3rd\3rd.txt" />
@@ -162,8 +166,12 @@
     <ClInclude Include="src\project\imageGray.cuh" />
     <ClInclude Include="src\project\kernel.cuh" />
     <ClInclude Include="src\project\matrixMulti.cuh" />
+    <ClInclude Include="src\project\parallelMergeSort.cuh" />
+    <ClInclude Include="src\project\parallelprefixSum.cuh" />
     <ClInclude Include="src\project\simpleCNN.cuh" />
+    <ClInclude Include="src\project\solveLinearEquations.cuh" />
     <ClInclude Include="src\project\vecAdd.h" />
+    <ClInclude Include="src\project\vecNormalization.cuh" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\project\kernel.cu" />
