--- a/cuda/cuda.vcxproj.filters
+++ b/cuda/cuda.vcxproj.filters
@@ -30,6 +30,10 @@
     <ClInclude Include="src\project\simpleCNN.cuh" />
     <ClInclude Include="src\project\imageGray.cuh" />
     <ClInclude Include="src\project\matrixMulti.cuh" />
+    <ClInclude Include="src\project\parallelMergeSort.cuh" />
+    <ClInclude Include="src\project\parallelprefixSum.cuh" />
+    <ClInclude Include="src\project\solveLinearEquations.cuh" />
+    <ClInclude Include="src\project\vecNormalization.cuh" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="src\project\kernel.cu" />
@@ -42,5 +46,9 @@
     <CudaCompile Include="src\project\simpleCNN.cu" />
     <CudaCompile Include="src\project\imageGray.cu" />
     <CudaCompile Include="src\project\matrixMulti.cu" />
+    <CudaCompile Include="src\project\parallelMergeSort.cu" />
+    <CudaCompile Include="src\project\parallelprefixSum.cu" />
+    <CudaCompile Include="src\project\solveLinearEquations.cu" />
+    <CudaCompile Include="src\project\vecNormalization.cu" />
   </ItemGroup>
 </Project>
