--- a/cuda/cuda.vcxproj
+++ b/cuda/cuda.vcxproj
@@ -147,6 +147,7 @@
     <CudaCompile Include="cuda.cpp" />
     <CudaCompile Include="src\project\imageGray.cu" />
     <CudaCompile Include="src\project\matrixMulti.cu" />
+    <CudaCompile Include="src\project\monteCarloCalcPI.cu" />
     <CudaCompile Include="src\project\parallelMergeSort.cu" />
     <CudaCompile Include="src\project\parallelprefixSum.cu" />
     <CudaCompile Include="src\project\simpleCNN.cu" />
@@ -163,6 +164,7 @@
     <None Include="src\common\error.cuh" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\project\monteCarloCalcPI.cuh" />
     <ClInclude Include="src\project\imageGray.cuh" />
     <ClInclude Include="src\project\kernel.cuh" />
     <ClInclude Include="src\project\matrixMulti.cuh" />
